# telemetry_scv_validator

./: .gitignore  LICENSE  README.md  README.ru.md  main.py  pyproject.toml
src/telemetry_csv_validator/: validators.py
tests/: test_validators.py
